# TianGong

./: .env.example  .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  README.zh-CN.md  README_CN.md  README_zh.md  pyproject.toml  requirements.txt  test_cinema_anims.py  test_out.txt  test_out_cmd.txt  tests_output.txt
agents/: _cultivators.json
tests/: test_marketplace.py  test_realm.py  test_sect.py  verify_mcp.py
tiangong/: __init__.py  __main__.py  animations.py  artifact_system.py  banner.py  ceremony.py  config.py  cultivator.py  ecosystem.py  forge.py  github_store.py  lineage.py  marketplace.py  mcp_server.py  realm.py  registry.py  review.py  search.py  sect.py  trial.py  vault.py
设计/: 分发平台架构设计.md  项目概览.md
